# irpete

./: .gitignore  MANUAL_VALIDATION.md  PLAYBOOK.md  README.md
.github/workflows/: ci.yml
catalog/: .env.example  .gitignore  README.md  pyproject.toml  schema.sql
catalog/deploy/: catalog.env.example
catalog/deploy/systemd/: irpete-catalog.service
catalog/scripts/: run-catalog-https.sh
catalog/src/irpete/: __init__.py  app.py  (+7 more)
catalog/src/irpete.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
catalog/tests/: conftest.py  test_api.py  test_capture_cli.py  test_capture_state.py  test_ci_release_contract.py  test_config.py  test_firmware_emitter_contract.py  test_https.py  test_readme_operator_contract.py  test_repository.py  test_systemd_deploy_contract.py  test_validate.py
firmware/emitter/: README.md  platformio.ini  requirements-pio.txt
firmware/pete/: .gitignore  README.md  platformio.ini
peter/: .env.example  README.md  pyproject.toml
peter/deploy/: peter.env.example
peter/deploy/systemd/: irpete-peter.service
peter/scripts/: run-peter-https.sh
peter/src/irpete/: __init__.py  app.py  capture_cli.py  capture_state.py  config.py  gpio_timing.py  main.py  repository.py  validate.py
peter/src/irpete.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
peter/tests/: test_api.py  test_capture_cli.py  test_ci_release_contract.py  test_config.py  test_firmware_pete_contract.py  test_https.py  test_readme_operator_contract.py  test_systemd_deploy_contract.py
plans/: later.md
plans/executed/: 01-catalog-emitter-rename-and-playbook.md
(+23 files in other folders)
